fix overflow

--- a/src/styles/PageWrapper.scss
+++ b/src/styles/PageWrapper.scss
@@ -61,6 +61,7 @@ $layout-hspacing: 13vh;
     font-family: $courier;
     font-size: 20px;
     padding: 0 5px;
+    overflow: scroll;
   }
 
   .highlight {
